# chip-8

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CHANGE_LOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md  chip8  chip8.py  cpu.go  disassembler.go  display.go  display_test.go  go.mod  go.sum  imgui.ini  keyboard.go  main.go  memory.go  memory_test.go  rustfmt.toml
.github/workflows/: test.yml
src/: cpu.rs  display.rs  keyboard.rs  main.c  main.cpp  main.rs  memory.hpp  memory.rs  registers.hpp  sound.rs
